# datacentric-challenge

./: .gitattributes  .gitignore  LICENSE  Readme.md  download_test_data.sh  predict.py  pyproject.toml  requirements.txt  run.py
autopet3/datacentric/: dataloader.py  dataset.py  logger.py  setup.py  transforms.py  utils.py
autopet3/fixed/: dynunet.py  evaluation.py  utils.py
config/: test_config.yml  test_predict.yml  test_preprocess.yml
scripts/: make_stratified_folds.py  preprocess_augmentations.py
test/: epoch=581_fold0.ckpt
test/data/: splits_final.json
test/preprocessed/train/: fdg_2ce074c2ea_02-04-2006-NA-PET-CT Ganzkoerper  primaer mit KM-43376_001.npz  fdg_3b1c9155f5_01-31-2003-NA-PET-CT Ganzkoerper  primaer mit KM-94971_001.npz  fdg_af547fa618_03-11-2006-NA-PET-CT Ganzkoerper  primaer mit KM-11358_001.npz  psma_69ea0c011af2e2d4_2014-05-01_000.npz  psma_95b833d46f153cd2_2017-11-18_000.npz  psma_95b833d46f153cd2_2017-11-18_001.npz  psma_95b833d46f153cd2_2018-04-16_000.npz  psma_95b833d46f153cd2_2018-04-16_001.npz
test/preprocessed/val/: fdg_2ce074c2ea_02-04-2006-NA-PET-CT Ganzkoerper  primaer mit KM-43376_000.npz  fdg_3b1c9155f5_01-31-2003-NA-PET-CT Ganzkoerper  primaer mit KM-94971_000.npz  fdg_af547fa618_03-11-2006-NA-PET-CT Ganzkoerper  primaer mit KM-11358_000.npz  psma_69ea0c011af2e2d4_2014-05-01_000.npz  psma_95b833d46f153cd2_2017-11-18_000.npz  psma_95b833d46f153cd2_2018-04-16_000.npz
